fix chrome android bottom gap bug

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -15,7 +15,7 @@ $darksteam: #292929
 // ****** background images ******
 html
     min-height: 100%
-    height: 100%
+    height: 100vh
 
 .bg-profile, .bg-match, .bg-quest
     background: url(/public/imgs/background.jpg) no-repeat center center fixed
